[project]
name = "homebrew-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "akashsara",email = "akashsara@outlook.com"}
]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "black (>=26.3.1,<27.0.0)",
    "discord-py (>=2.7.1,<3.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]

[project.scripts]
homebrew-helper = "homebrew_helper.main:run_bot"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "homebrew_helper" }]
