[project]
name = "homebrew-helper"
version = "0.1.0"
description = ""
authors = [
    {name = "akashsara",email = "akashsara@outlook.com"}
]
license = {text = "MIT"}
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py (>=2.7.1,<3.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "pymongo (>=4.16.0,<5.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
]

[project.scripts]
homebrew-helper = "homebrew_helper.main:run_bot"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "homebrew_helper" }]

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1,<27.0.0"
pytest = ">=9.0.3,<10.0.0"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["homebrew_helper"]
branch = true
omit = [
    "homebrew_helper/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
